Fix body height to see the scrollbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@ body {
   font-family: Bariol, Arial, sans-serif;
   font-size: 16px;
   line-height: 1.4;
+  height: 1000vh;
 }
 
 /* Header */
